Fixed .jpg extension for photo

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
                 <div class="card-body">
                     <a href="wisconsin.html">
-                        <img class="card-img-top" src="assets/conservation.JPG" alt="conservation"></a>
+                        <img class="card-img-top" src="assets/conservation.jpg" alt="conservation"></a>
                     <div class="card-body">
                         <h4 class="card-title">University of Wisconsin-Madison</h4>
                 
