fixed .jpg extension and width for photo

--- a/ncsu.html
+++ b/ncsu.html
@@ -67,7 +67,7 @@
      </div>
      
       <div class="card-body">
-            <a href="https://arcg.is/0KHeqC"><img src="assets/ncsu/webapp.JPG" alt="webapp" class="col img-responsive" width="40%" /></a>
+            <a href="https://arcg.is/0KHeqC"><img src="assets/ncsu/webapp.jpg" alt="webapp" class="col img-responsive" width="100%" /></a>
           
     </div>     
     </div>
