--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <div class="jumbotron">
         <div class="container">
-            <p>Applying GIS to environmental management.</p>
+            <p>GIS Portfolio</p>
         </div>
     </div>
     <div class="container">
@@ -89,7 +89,7 @@
         </div>
     </div>
                 <footer>
-                    <p class="copyright">© Lauren Holmes 2021</p>
+                    <p class="copyright">© Lauren Holmes 2022</p>
                 </footer>
 
     <!--put your external script links here-->
